fix: access to tags